# agents

./: .gitignore  README.md  pyproject.toml  requirements.txt
.venv39/: pyvenv.cfg
agents/application/: clob_price_history.py  clob_snapshot_backtest.py  clob_snapshot_store.py  continuous_backtest.py  dry_run_polymarket.py  gamma_series_history.py  hedge_cancel_strategy.py  polymarket_crypto_pages.py  polymarket_url.py  run_control.py  session_metrics.py  trade.py
agents/polymarket/: polymarket.py
data/clob_snapshots_bench/: bench_parallel.jsonl  crypto_clob_2026-03-27.jsonl
docs/: DATA_AND_LOGS.md
scripts/python/: cli.py  hedge_backtest_ui.py  metrics_dashboard.py  migrate_clob_jsonl_to_sqlite.py  prune_clob_sqlite_updown_only.py  record_crypto_clob_snapshots.py  run_backtest_grid_once.py  run_continuous_backtests.py  run_parallel_snapshot_recorders.py  split_clob_snapshots_by_family.py
tests/: test_clob_price_history.py  test_clob_snapshot_backtest.py  test_gamma_series_history.py  test_hedge_cancel_strategy.py  test_one_shot_strategy.py  test_polymarket_url.py
