[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-agents"
version = "0.0.0"
description = "Polymarket trading agents and tooling"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]
namespaces = true
